--- a/index.html
+++ b/index.html
@@ -7,9 +7,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yung Beef | Timeline</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="img/OTROS/LA VENDICION LOGO.png" type="image/x-icon">
 </head>
 
 <body>
+
+    <div class="v-line"></div>
+
+    <div id="OG">
+        <div class="row">
+            <p class="tituloalbum">GANGSTER ORIGINAL</p>
+            <div class="column-2">
+                <a href="https://open.spotify.com/album/7g4FMOsIFkKq2wSeTiwJ3q?si=VXLxMtJwTvmWcjSYGDHjLQ"><img src="img/OG/OG COP.jpg" alt="OG COVER" class="coverimg"></a>
+            </div>
+            <div class="column-3 canciones">
+                <b><p>Secretos</p>
+                <p>Sunydeis</p>
+                <p>Skit 1</p>
+                <p>Presión</p>
+                <p>Ya No Quiero Tus Besos</p>
+                <p>Skit 2</p>
+                <p>Trust Nobody</p>
+                <p>Pastillitas</p>
+                <p>Culpable</p>
+                <p>Las Prendas - Remix</p>
+                <p>Un Gangtser y una Scort</p>
+                <p>Pesando</p>
+                <p>Un Tiro</p>
+                <p>Sin Hook</p>
+                <p>Skit 3</p>
+                <p>5G</p></b>
+            </div>
+        </div>
+    </div>
+
+    <div id="EP2"></div>
 
 </body>
 
