--- a/index.html
+++ b/index.html
@@ -10,38 +10,21 @@
     <link rel="shortcut icon" href="img/OTROS/LA VENDICION LOGO.png" type="image/x-icon">
 </head>
 
-<body>
+<body style="background-color: black;">
 
-    <div class="v-line"></div>
-
-    <div id="OG">
-        <div class="row">
-            <p class="tituloalbum">GANGSTER ORIGINAL</p>
-            <div class="column-2">
-                <a href="https://open.spotify.com/album/7g4FMOsIFkKq2wSeTiwJ3q?si=VXLxMtJwTvmWcjSYGDHjLQ"><img src="img/OG/OG COP.jpg" alt="OG COVER" class="coverimg"></a>
-            </div>
-            <div class="column-3 canciones">
-                <b><p>Secretos</p>
-                <p>Sunydeis</p>
-                <p>Skit 1</p>
-                <p>Presión</p>
-                <p>Ya No Quiero Tus Besos</p>
-                <p>Skit 2</p>
-                <p>Trust Nobody</p>
-                <p>Pastillitas</p>
-                <p>Culpable</p>
-                <p>Las Prendas - Remix</p>
-                <p>Un Gangtser y una Scort</p>
-                <p>Pesando</p>
-                <p>Un Tiro</p>
-                <p>Sin Hook</p>
-                <p>Skit 3</p>
-                <p>5G</p></b>
-            </div>
-        </div>
+    <div id="nada">
+        <hr id="franjaroja" color="red" size=10>
     </div>
 
-    <div id="EP2"></div>
+    <h1 id="tituloindex">YUNG BEEF TIMELINE</h1>
+
+    <div>
+        <a href="og.html"><button id="botonindex">EMPEZAR</button></a>
+    </div>
+
+    <div class="centro">
+        <hr id="franjaroja" color="red" size=10>
+    </div>
 
 </body>
 
