--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 
 <body style="background-color: black;">
 
-    <div id="nada">
+    <div class="nada">
         <hr id="franjaroja" color="red" size=10>
     </div>
 
     <h1 id="tituloindex">YUNG BEEF TIMELINE</h1>
 
-    <div>
+    <div id="nada" class="centro">
         <a href="og.html"><button id="botonindex">EMPEZAR</button></a>
     </div>
 
-    <div class="centro">
-        <hr id="franjaroja" color="red" size=10>
+    <div class="nadaabajo">
+        <hr id="franjarojaabajo" color="red" size=10>
     </div>
 
 </body>
