--- a/og.html
+++ b/og.html
@@ -10,6 +10,13 @@
     <link rel="shortcut icon" href="img/OTROS/LA VENDICION LOGO.png" type="image/x-icon">
 </head>
 
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Spectral:wght@300&display=swap');
+    html {
+        font-family: 'Spectral', serif;
+    }
+</style>
+
 <body style="    --opacidad-negro: 0.5;
 background-image: linear-gradient(rgba(0, 0, 0, var(--opacidad-negro)), rgba(0, 0, 0, var(--opacidad-negro))), url(img/OG/OG\ COP.jpg);
 background-size: cover;
@@ -40,6 +47,9 @@ background-attachment: fixed;">
                 <p>Sin Hook</p>
                 <p>Skit 3</p>
                 <p>5G</p></b>
+            </div>
+            <div class="column1">
+                <a href="ep2.html"><button>SIGUIENTE</button></a>
             </div>
         </div>
     </div>
