--- a/ep2.html
+++ b/ep2.html
@@ -18,6 +18,10 @@ background-position: top;
 background-attachment: fixed;">
 
     <div id="EP2">
+        <div class="nada">
+            <hr id="franjaroja" color="red" size=10>
+        </div>
+
         <div class="row">
             <p class="tituloalbum">EL PLUGG 2</p>
             <div class="column-2">
@@ -50,7 +54,13 @@ background-attachment: fixed;">
                 <p>METALLICA</p></b>
             </div>
         </div>
-    </div>
+        <div id="nada" class="column-1 centro">
+            <a href="a4.html"><button class="botonsiguiente">SIGUIENTE</button></a>
+        </div>
+        <br></br>
+        <div class="nadaabajo">
+            <hr id="franjarojaabajo" color="red" size=10>
+        </div>
 
 </body>
 
