--- a/og.html
+++ b/og.html
@@ -10,12 +10,6 @@
     <link rel="shortcut icon" href="img/OTROS/LA VENDICION LOGO.png" type="image/x-icon">
 </head>
 
-<style>
-    @import url('https://fonts.googleapis.com/css2?family=Spectral:wght@300&display=swap');
-    html {
-        font-family: 'Spectral', serif;
-    }
-</style>
 
 <body style="    --opacidad-negro: 0.5;
 background-image: linear-gradient(rgba(0, 0, 0, var(--opacidad-negro)), rgba(0, 0, 0, var(--opacidad-negro))), url(img/OG/OG\ COP.jpg);
@@ -25,6 +19,10 @@ background-position: top;
 background-attachment: fixed;">
 
     <div id="OG">
+        <div class="nada">
+            <hr id="franjaroja" color="red" size=10>
+        </div>
+
         <div class="row">
             <p class="tituloalbum">GANGSTER ORIGINAL</p>
             <div class="column-2">
@@ -48,8 +46,12 @@ background-attachment: fixed;">
                 <p>Skit 3</p>
                 <p>5G</p></b>
             </div>
-            <div class="column1">
-                <a href="ep2.html"><button>SIGUIENTE</button></a>
+            <div id="nada" class="column-1 centro">
+                <a href="ep2.html"><button class="botonsiguiente">SIGUIENTE</button></a>
+            </div>
+            <br></br>
+            <div class="nadaabajo">
+                <hr id="franjarojaabajo" color="red" size=10>
             </div>
         </div>
     </div>
