--- a/a4.html
+++ b/a4.html
@@ -11,7 +11,7 @@
 </head>
 
 <body style="    --opacidad-negro: 0.5;
-background-image: linear-gradient(rgba(0, 0, 0, var(--opacidad-negro)), rgba(0, 0, 0, var(--opacidad-negro))), url(img/ELPLUGG2/EL\ PLUGG\ 2\ COVER.jpg);
+background-image: linear-gradient(rgba(0, 0, 0, var(--opacidad-negro)), rgba(0, 0, 0, var(--opacidad-negro))), url(img/A4/A4\ COVER.jpg);
 background-size: cover;
 background-repeat: no-repeat;
 background-position: top;
@@ -19,9 +19,9 @@ background-attachment: fixed;">
 
     <div id="EP2">
         <div class="row">
-            <p class="tituloalbum">EL PLUGG 2</p>
+            <p class="tituloalbum">ADROMICFMS 4</p>
             <div class="column-2">
-                <a href="https://open.spotify.com/album/1yKOjBznVpmU9GD8qBSude?si=HzuODVGCTSir2wMinj2lsA"><img src="img/ELPLUGG2/EL PLUGG 2 COVER.jpg" alt="EP2 COVER" class="coverimg"></a>
+                <a href="https://open.spotify.com/album/1yKOjBznVpmU9GD8qBSude?si=HzuODVGCTSir2wMinj2lsA"><img src="img/A4/A4 COVER.jpg" alt="A4 COVER" class="coverimg"></a>
             </div>
             <div class="column-3 canciones">
                 <b><p>Intro</p>
