--- a/ep2.html
+++ b/ep2.html
@@ -27,30 +27,32 @@ background-attachment: fixed;">
                 <a href="https://open.spotify.com/album/71zTvjTLSXaNb97Xitozwg?si=YlW9-j7kQIa17SOOEOnQig"><img src="img/ELPLUGG2/EL PLUGG 2 COVER.jpg" alt="EP2 COVER" class="coverimg"></a>
             </div>
             <div class="column-3 canciones" style="line-height: 6px;">
-                <b><p>INTRO</p>
-                <p>PROBLEMAS MUSICALES</p>
-                <p>SANTUARIO 2</p>
-                <p>20TRAP20-IKARI</p>
-                <p>TRANSILVANIA</p>
-                <p>LANZADERA</p>
-                <p>HOROSCOPO</p>
-                <p>BLICKY</p>
-                <p>YOGA</p>
-                <p>BUFFALO 66</p>
-                <p>CARAMELITO</p>
-                <p>WICKR</p>
-                <p>HASTA EL DIA QUE ME MUERA</p>
-                <p>SI TE VAS NO VUELVAS</p>
-                <p>PARENTAL ADVIDORES</p>
-                <p>NO TE QUIERO VER MAL</p>
-                <p>KASINO</p>
-                <p>ROG ELIO</p>
-                <p>KOURTNEY HATE</p>
-                <p>MAJIN VEGETA</p>
-                <p>SWISS MONEY</p>
-                <p>ES UN ADIOS</p>
-                <p>PLUGG 2</p>
-                <p>METALLICA</p></b>
+                <b>
+                <a href="https://open.spotify.com/track/6rPTgMKyULHjgnnoT4CeDr?si=6d9e9bcb05c248c2"><p>INTRO</p></a>
+                <a href="https://open.spotify.com/track/3Cr55Wk3Rwk9bXMHo8xNZc?si=2a133706be254157"><p>PROBLEMAS MUSICALES</p></a>
+                <a href="https://open.spotify.com/track/72VdE6C0M5jXd9qRSbwDCI?si=d702037bed3047a0"><p>SANTUARIO 2</p></a>
+                <a href="https://open.spotify.com/track/5MLdld8gbYGIseg2jST7xF?si=6858d2dc974b4e65"><p>20TRAP20-IKARI</p></a>
+                <a href="https://open.spotify.com/track/6uDq8OtxUhEUGYHhMxV0DV?si=535559ff7e36438f"><p>TRANSILVANIA</p></a>
+                <a href="https://open.spotify.com/track/7aiB1LXF9RLiHOEugVrrxN?si=dbed4e0fe3ae4dff"><p>LANZADERA</p></a>
+                <a href="https://open.spotify.com/track/5EHc2xJMVLGE78EPPKnBWC?si=55fcd8f39cb74696"><p>HOROSCOPO</p></a>
+                <a href="https://open.spotify.com/track/3jQhYizgvecP09XietvP26?si=746379fac3e248c9"><p>BLICKY</p></a>
+                <a href="https://open.spotify.com/track/3JWgUqc8PzQjB9IKHUJLq8?si=2258310b0593478b"><p>YOGA</p></a>
+                <a href="https://open.spotify.com/track/35zgIYyxAbraQKK9KlmYWY?si=1c11a80d00644913"><p>BUFFALO 66</p></a>
+                <a href="https://open.spotify.com/track/5H5R57ohKwtg7Ksjc3Jjve?si=0beeaf2d3449435d"><p>CARAMELITO</p></a>
+                <a href="https://open.spotify.com/track/6UszkTY7MpoWSUP7WEs5Yl?si=2fd4ee46af764262"><p>WICKR</p></a>
+                <a href="https://open.spotify.com/track/1fAKzZznzGFqFrUU4jHFDK?si=4606986858a3444c"><p>HASTA EL DIA QUE ME MUERA</p></a>
+                <a href="https://open.spotify.com/track/1HW3qOqFBayeiPTi6UQZgm?si=de7781fe1d614e00"><p>SI TE VAS NO VUELVAS</p></a>
+                <a href="https://open.spotify.com/track/2slHcc0Bq2dJUC3Lc5FJao?si=c90f3cd7c6db4a28"><p>PARENTAL ADVIDORES</p></a>
+                <a href="https://open.spotify.com/track/3iwSvxnhQRNdkCsAWUqpBj?si=1bf9a1c053c2469a"><p>NO TE QUIERO VER MAL</p></a>
+                <a href="https://open.spotify.com/track/0gIMgP4DxxLlHpAojHOsvm?si=86eb2b64cece4fa0"><p>KASINO</p></a>
+                <a href="https://open.spotify.com/track/5AceTSHDf2MyTy6JaNhzxE?si=11f7207eb1354971"><p>ROG ELIO</p></a>
+                <a href="https://open.spotify.com/track/5HpHX0lB2VPLwveD1Expor?si=cc6e4b79fbc54e3b"><p>KOURTNEY HATE</p></a>
+                <a href="https://open.spotify.com/track/65lwQhiyiZgVv0CDLwpEJd?si=3885de546be047a7"><p>MAJIN VEGETA</p></a>
+                <a href="https://open.spotify.com/track/0XXN7UMDMklVRy7Mt0gXm8?si=ad3b0e64f18c44f8"><p>SWISS MONEY</p></a>
+                <a href="https://open.spotify.com/track/15czs9J8Ze7ODT1ykKAD2B?si=1ef8ca105d4b4187"><p>ES UN ADIOS</p></a>
+                <a href="https://open.spotify.com/track/259aw9wAaxGY24Wj6GGKFk?si=e316a8436f334cac"><p>PLUGG 2</p></a>
+                <a href="https://open.spotify.com/track/4XeqABCbUqyznqTgB8Ckzj?si=d20cfb6aee054914"><p>METALLICA</p></a>
+                </b>
             </div>
         </div>
         <div id="nada" class="column-1 centro">
