--- a/a4.html
+++ b/a4.html
@@ -17,37 +17,42 @@ background-repeat: no-repeat;
 background-position: top;
 background-attachment: fixed;">
 
-    <div id="EP2">
+    <div id="A4">
+        <div class="nada">
+            <hr id="franjaroja" color="red" size=10>
+        </div>
         <div class="row">
             <p class="tituloalbum">ADROMICFMS 4</p>
             <div class="column-2">
-                <a href="https://open.spotify.com/album/1yKOjBznVpmU9GD8qBSude?si=HzuODVGCTSir2wMinj2lsA"><img src="img/A4/A4 COVER.jpg" alt="A4 COVER" class="coverimg"></a>
+                <a href="https://open.spotify.com/album/1yKOjBznVpmU9GD8qBSude?si=HzuODVGCTSir2wMinj2lsA" target="_blank"><img src="img/A4/A4 COVER.jpg" alt="A4 COVER" class="coverimg"></a>
             </div>
             <div class="column-3 canciones">
-                <b><p>Intro</p>
-                <p>PROBLEMAS MUSICALES</p>
-                <p>SANTUARIO 2</p>
-                <p>20TRAP20-IKARI</p>
-                <p>TRANSILVANIA</p>
-                <p>LANZADERA</p>
-                <p>HOROSCOPO</p>
-                <p>BLICKY</p>
-                <p>YOGA</p>
-                <p>BUFFALO 66</p>
-                <p>CARAMELITO</p>
-                <p>WICKR</p>
-                <p>HASTA EL DIA QUE ME MUERA</p>
-                <p>SI TE VAS NO VUELVAS</p>
-                <p>PARENTAL ADVIDORES</p>
-                <p>NO TE QUIERO VER MAL</p>
-                <p>KASINO</p>
-                <p>ROG ELIO</p>
-                <p>KOURTNEY HATE</p>
-                <p>MAJIN VEGETA</p>
-                <p>SWISS MONEY</p>
-                <p>ES UN ADIOS</p>
-                <p>PLUGG 2</p>
-                <p>METALLICA</p></b>
+                <b>
+                <a href="https://open.spotify.com/track/6ui7Dactv1IHRRdsYsrl4Q?si=424cbdcfbb794283" target="_blank"><p>Intro</p></a>
+                <a href="https://open.spotify.com/track/1tlupfFLMTjR7e5JKHZ9qt?si=33d21b26c0b64218" target="_blank"><p>Daniela Bregoli</p></a>
+                <a href="https://open.spotify.com/track/4JZGlzQtZrJewZbnWAtQE7?si=16fc51a8a9104d28" target="_blank"><p>Me Perdí En Madrid</p></a>
+                <a href="https://open.spotify.com/track/108whpchHSWyW0FQ4XvTBW?si=404e0207e0394606" target="_blank"><p>Infierno</p></a>
+                <a href="https://open.spotify.com/track/4Xlts24LWRNYlxHnNd0ab3?si=bfa7a5dce917436d" target="_blank"><p>Rosalía</p></a>
+                <a href="https://open.spotify.com/track/5rHODv97uhk46SjNtY0zdl?si=6e20b92920a445d0" target="_blank"><p>Tu no Princesa</p></a>
+                <a href="https://open.spotify.com/track/1kZtYCIsaMnlFqImTLsQuh?si=d9817ac96b57429f" target="_blank"><p>Brazy</p></a>
+                <a href="https://open.spotify.com/track/0nV4Uqq3c3f1TsSCoV8Asr?si=6b25c3c2e3a648c7" target="_blank"><p>Cryin' For Pxxr Love 3</p></a>
+                <a href="https://open.spotify.com/track/1pyOF64IWP0y3OaPr28yXk?si=da29687aa8df47fe" target="_blank"><p>33</p></a>
+                <a href="https://open.spotify.com/track/1GzV4MzMvKGrQ04ox2ASH4?si=9c4aa8e3bb554032" target="_blank"><p>Shootin X Provation</p></a>
+                <a href="https://open.spotify.com/track/0rwfHkG07MttxuNbrIGPCC?si=f5386fa98d3248f9" target="_blank"><p>Cbr</p></a>
+                <a href="https://open.spotify.com/track/72YqqYKhUwcM5c4VglgCkT?si=dcf4a14cd0164fb5" target="_blank"><p>Cold Turkey</p></a>
+                <a href="https://open.spotify.com/track/2fXrqoUhsmJzHuzXRTWHy9?si=09ed5e3d590f4b79" target="_blank"><p>Balenciaga</p></a>
+                <a href="https://open.spotify.com/track/53S21ktgXuXN4qXHLDyOlp?si=72b8c17e7b9b4dd0" target="_blank"><p>Lonely</p></a>
+                <a href="https://open.spotify.com/track/7mweaC90V3E2rKze5teJ6M?si=540cab64e57d42e2" target="_blank"><p>Valentino Demons</p></a>
+                <a href="https://open.spotify.com/track/1GtsI9he9vt9LKSkYzsHl1?si=f1ad306f1f4b489d" target="_blank"><p>Rosas Azules</p></a>
+                <a href="https://open.spotify.com/track/63pUlypXn3Lt9fbWUO5DjQ?si=be58943db787464f" target="_blank"><p>Effy</p></a>
+                </b>
+            </div>
+            <div id="nada" class="column-1 centro">
+                <a href="tk.html"><button class="botonsiguiente">SIGUIENTE</button></a>
+            </div>
+            <br></br>
+            <div class="nadaabajo">
+                <hr id="franjarojaabajo" color="red" size=10>
             </div>
         </div>
     </div>
