--- a/og.html
+++ b/og.html
@@ -25,26 +25,26 @@ background-attachment: fixed;">
         <p class="tituloalbum">GANGSTER ORIGINAL</p>
         <div class="row">
             <div class="column-2">
-                <a href="https://open.spotify.com/album/7g4FMOsIFkKq2wSeTiwJ3q?si=VXLxMtJwTvmWcjSYGDHjLQ"><img src="img/OG/OG COP.jpg" alt="OG COVER" class="coverimg"></a>
+                <a href="https://open.spotify.com/album/7g4FMOsIFkKq2wSeTiwJ3q?si=VXLxMtJwTvmWcjSYGDHjLQ" target="_blank"><img src="img/OG/OG COP.jpg" alt="OG COVER" class="coverimg"></a>
             </div>
             <div class="column-3 canciones">
                 <b>
-                <a href="https://open.spotify.com/track/4uDD0KuZo8WwLlDLvtnSjf?si=0f3774e2a0dc41a1"><p>Secretos</p></a>
-                <a href="https://open.spotify.com/track/1YvjOpGvRIX5kjW3ec1xQV?si=bc2fa52e2d5541ca"><p>Sunydeis</p></a>
-                <a href="https://open.spotify.com/track/7lXBZt2nVOoHRGT5H5njkm?si=cf870f895e484f12"><p>Skit 1</p></a>
-                <a href="https://open.spotify.com/track/0qTXbcv8VedUYBK3nU2yeY?si=a13f21a665184e73"><p>Presión</p></a>
-                <a href="https://open.spotify.com/track/0Eln7dwh2M9BHljLiYxK6T?si=20b474be830c45f6"><p>Ya No Quiero Tus Besos</p></a>
-                <a href="https://open.spotify.com/track/1WlI4XDVhHyj7C5hZHgc3O?si=07d75c59fb284505"><p>Skit 2</p></a>
-                <a href="https://open.spotify.com/track/1eY9FBM6zqjupb8N2dBqSF?si=dfa8bdaa18e04e29"><p>Trust Nobody</p></a>
-                <a href="https://open.spotify.com/track/6NZ9JUnikSkEhqDIeQxI7G?si=f052cb42f4b74567"><p>Pastillitas</p></a>
-                <a href="https://open.spotify.com/track/1GTqXrHEVVvLvn4DM1QR1B?si=6b86965717d44e84"><p>Culpable</p></a>
-                <a href="https://open.spotify.com/track/01l68w7zR2Hwt77NNM5plq?si=638a63df15a1476e"><p>Las Prendas - Remix</p></a>
-                <a href="https://open.spotify.com/track/4GhW6qvF8LE6mfEb1tB94m?si=6492aa34c64b49fc"><p>Un Gangtser y una Scort</p></a>
-                <a href="https://open.spotify.com/track/633S3FmqpWQPOOfsT8WPhI?si=1d09ed30367e40be"><p>Pesando</p></a>
-                <a href="https://open.spotify.com/track/0DvU4htWNl88FjA2J5PX6V?si=f02e45095b604f87"><p>Un Tiro</p></a>
-                <a href="https://open.spotify.com/track/5kXIA35caJPrE1FvpB2yig?si=22e366727b0d493b"><p>Sin Hook</p></a>
-                <a href="https://open.spotify.com/track/0oZzi3LLznOmH78vwhmTLr?si=f0d0efab8a4c4ccc"><p>Skit 3</p></a>
-                <a href="https://open.spotify.com/track/0Ikv8ZmHf7Ap2DRN60Cbr8?si=2bf4d35311e54c20"><p>5G</p></a>
+                <a href="https://open.spotify.com/track/4uDD0KuZo8WwLlDLvtnSjf?si=0f3774e2a0dc41a1" target="_blank"><p>Secretos</p></a>
+                <a href="https://open.spotify.com/track/1YvjOpGvRIX5kjW3ec1xQV?si=bc2fa52e2d5541ca" target="_blank"><p>Sunydeis</p></a>
+                <a href="https://open.spotify.com/track/7lXBZt2nVOoHRGT5H5njkm?si=cf870f895e484f12" target="_blank"><p>Skit 1</p></a>
+                <a href="https://open.spotify.com/track/0qTXbcv8VedUYBK3nU2yeY?si=a13f21a665184e73" target="_blank"><p>Presión</p></a>
+                <a href="https://open.spotify.com/track/0Eln7dwh2M9BHljLiYxK6T?si=20b474be830c45f6" target="_blank"><p>Ya No Quiero Tus Besos</p></a>
+                <a href="https://open.spotify.com/track/1WlI4XDVhHyj7C5hZHgc3O?si=07d75c59fb284505" target="_blank"><p>Skit 2</p></a>
+                <a href="https://open.spotify.com/track/1eY9FBM6zqjupb8N2dBqSF?si=dfa8bdaa18e04e29" target="_blank"><p>Trust Nobody</p></a>
+                <a href="https://open.spotify.com/track/6NZ9JUnikSkEhqDIeQxI7G?si=f052cb42f4b74567" target="_blank"><p>Pastillitas</p></a>
+                <a href="https://open.spotify.com/track/1GTqXrHEVVvLvn4DM1QR1B?si=6b86965717d44e84" target="_blank"><p>Culpable</p></a>
+                <a href="https://open.spotify.com/track/01l68w7zR2Hwt77NNM5plq?si=638a63df15a1476e" target="_blank"><p>Las Prendas - Remix</p></a>
+                <a href="https://open.spotify.com/track/4GhW6qvF8LE6mfEb1tB94m?si=6492aa34c64b49fc" target="_blank"><p>Un Gangtser y una Scort</p></a>
+                <a href="https://open.spotify.com/track/633S3FmqpWQPOOfsT8WPhI?si=1d09ed30367e40be" target="_blank"><p>Pesando</p></a>
+                <a href="https://open.spotify.com/track/0DvU4htWNl88FjA2J5PX6V?si=f02e45095b604f87" target="_blank"><p>Un Tiro</p></a>
+                <a href="https://open.spotify.com/track/5kXIA35caJPrE1FvpB2yig?si=22e366727b0d493b" target="_blank"><p>Sin Hook</p></a>
+                <a href="https://open.spotify.com/track/0oZzi3LLznOmH78vwhmTLr?si=f0d0efab8a4c4ccc" target="_blank"><p>Skit 3</p></a>
+                <a href="https://open.spotify.com/track/0Ikv8ZmHf7Ap2DRN60Cbr8?si=2bf4d35311e54c20" target="_blank"><p>5G</p></a>
                 </b>
             </div>
             <div id="nada" class="column-1 centro">
